<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/navigation_drawer_width"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="@dimen/navigation_drawer_width"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/splash" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="rateApp"
            android:text="@string/rate" />

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="shareApp"
            android:text="@string/share_app" />
    </LinearLayout>
</LinearLayout>

